[gd_scene load_steps=3 format=3 uid="uid://qi5phmo1ry8c"]

[ext_resource type="Script" uid="uid://htxise8eelf" path="res://Scripts/menu.gd" id="1_1rerr"]
[ext_resource type="Texture2D" uid="uid://bggcxyceb6xa0" path="res://Assets/revoler.png" id="2_xhh6f"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_1rerr")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -20.0
offset_right = 38.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
text = "Play"
icon = ExtResource("2_xhh6f")

[node name="ShopButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.296
anchor_top = 0.49400002
anchor_right = 0.296
anchor_bottom = 0.49400002
grow_vertical = 2
text = "Shop"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
